--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "prettier": "^2.8.8",
+    "prisma": "^4.15.0",
     "ts-node-dev": "^2.0.0",
     "tsup": "^6.7.0",
     "typescript": "^5.1.3"
