--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nasa-ts",
   "version": "1.0.0",
-  "description": "",
+  "description": "Nasa mission control project based on the NASA ztm's course project",
   "main": "index.js",
   "scripts": {
     "start": "node dist/server.js",
@@ -10,8 +10,8 @@
     "build:start": "npm run build && npm start"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Nicolas Lima",
+  "license": "MIT",
   "devDependencies": {
     "@tsconfig/node20": "^1.0.1",
     "@types/express": "^4.17.17",
@@ -32,6 +32,7 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "@prisma/client": "^4.15.0",
     "express": "^4.18.2",
     "zod": "^3.21.4"
   }
