--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "keywords": [],
   "author": "Nicolas Lima",
   "license": "MIT",
+  "prisma": {
+    "seed": "ts-node --transpile-only prisma/seed.ts"
+  },
   "devDependencies": {
     "@tsconfig/node20": "^1.0.1",
     "@types/express": "^4.17.17",
@@ -27,12 +30,14 @@
     "eslint-plugin-promise": "^6.1.1",
     "prettier": "^2.8.8",
     "prisma": "^4.15.0",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "tsup": "^6.7.0",
     "typescript": "^5.1.3"
   },
   "dependencies": {
     "@prisma/client": "^4.15.0",
+    "csv-parse": "^5.4.0",
     "express": "^4.18.2",
     "zod": "^3.21.4"
   }
