--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@prisma/client": "^4.15.0",
     "csv-parse": "^5.4.0",
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "zod": "^3.21.4"
   }
 }
