--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node dist/server.js",
     "start:dev": "ts-node-dev --respawn --watch src src/server.ts",
     "build": "tsup src",
-    "build:start": "npm run build && npm start"
+    "build:start": "npm run build && npm start",
+    "test": "vitest run",
+    "test:dev": "vitest --watch"
   },
   "keywords": [],
   "author": "Nicolas Lima",
@@ -37,7 +39,8 @@
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "tsup": "^6.7.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "vitest": "^0.32.2"
   },
   "dependencies": {
     "@prisma/client": "^4.15.0",
