--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "csv-parse": "^5.4.0",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
+    "validator": "^13.9.0",
     "zod": "^3.21.4"
   }
 }
