--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "start:dev": "ts-node-dev --respawn --watch src src/server.ts",
     "build": "tsup src",
     "build:start": "npm run build && npm start",
-    "test": "vitest run",
-    "test:dev": "vitest --watch"
+    "test": "dotenv -e .env.test vitest run",
+    "test:dev": "vitest --watch",
+    "test:migrate": "dotenv -e .env.test -- npx prisma migrate dev"
   },
   "keywords": [],
   "author": "Nicolas Lima",
@@ -22,12 +23,15 @@
   },
   "devDependencies": {
     "@tsconfig/node20": "^1.0.1",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
+    "@types/validator": "^13.7.17",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
+    "dotenv-cli": "^7.2.1",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^35.0.0",
@@ -46,6 +50,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.15.0",
+    "bcryptjs": "^2.4.3",
     "csv-parse": "^5.4.0",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
