--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:dev": "ts-node-dev --respawn --watch src src/server.ts",
     "build": "tsup src",
     "build:start": "npm run build && npm start",
-    "test": "dotenv -e .env.test -- npx prisma migrate reset --force --skip-seed && vitest run",
+    "test": "dotenv -e .env.test -- npx prisma migrate reset --force --skip-seed && dotenv -e .env.test -- vitest run",
     "test:dev": "dotenv -e .env.test -- vitest --watch",
     "test:migrate": "dotenv -e .env.test -- npx prisma migrate dev"
   },
