chore: change vitest config to emit test titles

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,5 +16,7 @@
     "sourceType": "module"
   },
   "plugins": ["@typescript-eslint"],
-  "rules": {}
+  "rules": {
+    "no-explicit-any": "off"
+  }
 }
