--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "bcryptjs": "^2.4.3",
     "csv-parse": "^5.4.0",
     "express": "^4.18.2",
+    "jose": "^4.14.4",
     "morgan": "^1.10.0",
     "validator": "^13.9.0",
     "zod": "^3.21.4"
