fix: accept node version gt 16 and enforce engine with npmrc

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "seed": "ts-node --transpile-only prisma/seed.ts"
   },
   "engines": {
-    "node": "v20.0.0"
+    "node": ">=16.0.0"
   },
   "devDependencies": {
     "@tsconfig/node20": "^1.0.1",
