--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -6,11 +6,6 @@ on:
     branches: [main]
 jobs:
   build:
-    env:
-      DATABASE_URL: somerandomdatabase
-      PORT: 3000
-      JWT_SECRET: secretsecretsecret3times
-      JWT_ENC_ALG: A128CBC-HS256
     strategy:
       matrix:
         node-version: [16.x, 18.x]
@@ -23,4 +18,17 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
+      - name: Setup PostgreSQL database
+        uses: ikalnytskyi/action-setup-postgres@v4
+        with:
+          username: ci
+          password: testing
+          database: nasa-tests
+          port: 5432
+        id: postgres
       - run: npm ci
+      - run: npm run ci:test
+        env:
+          DATABASE_URL: ${{ steps.postgres.outputs.connection-uri }}
+          JWT_SECRET: secretsecretsecret3times
+          JWT_ENC_ALG: A128CBC-HS256
