fix: attempt 13142341324123 to fix the empty variable on bash

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -31,10 +31,9 @@ jobs:
       - name: Generate JWT secret
         id: secret
         run: |
-          random_secret=$(openssl rand -base64 32)
-          echo "jwt_secret=random_secret" >> $GITHUB_OUTPUT
+          jwt_secret=$(openssl rand -base64 32)
+          echo "$jwt_secret" >> $GITHUB_OUTPUT
           echo "$jwt_secret"
-          echo $GITHUB_OUTPUT
       - run: npm ci
       - run: npm run ci:test
         env:
