--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.17",
@@ -57,6 +58,7 @@
     "express": "^4.18.2",
     "jose": "^4.14.4",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "validator": "^13.9.0",
     "zod": "^3.21.4"
   }
