--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "dotenv -e .env.test -- npx prisma migrate reset --force && dotenv -e .env.test -- vitest run",
     "test:dev": "dotenv -e .env.test -- vitest --watch",
     "test:migrate": "dotenv -e .env.test -- npx prisma migrate dev",
+    "test:coverage": "dotenv -e .env.test -- npx prisma migrate reset --force && dotenv -e .env.test -- vitest run --coverage",
     "ci": "npm install && npm run build:start",
     "ci:test": "npx prisma migrate reset --force && vitest run"
   },
@@ -34,6 +35,7 @@
     "@types/validator": "^13.7.17",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
+    "@vitest/coverage-v8": "^0.34.1",
     "dotenv-cli": "^7.2.1",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
