--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "dependencies": {
     "@prisma/client": "^4.15.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.40.0",
     "csv-parse": "^5.4.0",
     "express": "^4.18.2",
     "jose": "^4.14.4",
