ci: add jwt encoding algorithm to github secrets

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -39,7 +39,7 @@ jobs:
         env:
           DATABASE_URL: ${{ steps.postgres.outputs.connection-uri }}
           JWT_SECRET: ${{ steps.secret.outputs.jwt_secret }}
-          JWT_ENC_ALG: A128CBC-HS256
+          JWT_ENC_ALG: ${{ secrets.JWT_ENC_ALG }}
           CLOUDINARY_API_KEY: ${{ secrets.CLOUDINARY_API_KEY }}
           CLOUDINARY_API_SECRET: ${{ secrets.CLOUDINARY_API_SECRET }}
           CLOUDINARY_CLOUD_NAME: ${{ secrets.CLOUDINARY_CLOUD_NAME }}
