feat: add 'typeRoots' field to use custom types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
-    "noEmitOnError": true
+    "noEmitOnError": true,
+    "typeRoots": ["typings", "./node_modules/@types"]
   }
 }
