--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "jose": "^4.14.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "swagger-ui-express": "^5.0.0",
     "validator": "^13.9.0",
     "zod": "^3.21.4"
   }
