--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "multer": "^1.4.5-lts.1",
     "swagger-ui-express": "^5.0.0",
     "validator": "^13.9.0",
+    "yaml": "^2.3.2",
     "zod": "^3.21.4"
   }
 }
