--- a/src/config/swagger/api-doc.yaml
+++ b/src/config/swagger/api-doc.yaml
@@ -10,3 +10,21 @@ server:
 license:
   name: MIT
   url: https://github.com/wnicolass/nasa-ztm-ts/blob/main/LICENSE.md
+paths:
+  /planets:
+    get:
+      summary: Returns a list of planets
+      responses:
+        '404':
+          description: No planets were found
+        '200':
+          description: An array of planets
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    planetName:
+                      type: string
