--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tsconfig/node20": "^1.0.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
+    "@types/js-yaml": "^4.0.5",
     "@types/morgan": "^1.9.4",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.3.1",
@@ -66,11 +67,12 @@
     "express": "^4.18.2",
     "graphql": "^16.7.1",
     "jose": "^4.14.4",
+    "js-yaml": "^4.1.0",
+    "merge-yaml-ts": "^1.0.7",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "swagger-ui-express": "^5.0.0",
     "validator": "^13.9.0",
-    "yaml": "^2.3.2",
     "zod": "^3.21.4"
   }
 }
