docs: remove redundant components section on main api-doc.yaml

--- a/docs/spec/api-doc.yaml
+++ b/docs/spec/api-doc.yaml
@@ -24,15 +24,4 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: 'planet.yaml#/components/schemas/Planet'
-components:
-  schemas:
-    Planet:
-      type: object
-      properties:
-        planetId:
-          type: string
-          example: 550e8400-e29b-41d4-a716-446655440000
-        planetName:
-          type: string
-          example: Kepler 442b
+                  $ref: '#/components/schemas/Planet'
