docs: update 'NotFoundError' component to make it more generic

--- a/docs/spec/components/errors.yaml
+++ b/docs/spec/components/errors.yaml
@@ -11,4 +11,4 @@ components:
       properties:
         message:
           type: string
-          example: User not found
+          example: Something was not found
