--- a/docs/spec/api-doc.yaml
+++ b/docs/spec/api-doc.yaml
@@ -84,6 +84,35 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/NotFoundError'
+  /files:
+    post:
+      security:
+        - bearerAuth: []
+      summary: Upload user profile image
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/RequestFile'
+      responses:
+        '200':
+          description: Updated profile image
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ResponseFile'
+        '400':
+          description: Invalid file extension/size
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InvalidArgumentError'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnauthorizedUserError'
   /launches:
     get:
       summary: Returns a list of launches
