docs: add internal server error

--- a/docs/spec/api-doc.yaml
+++ b/docs/spec/api-doc.yaml
@@ -33,6 +33,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InvalidArgumentError'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
   /auth/signin:
     post:
       summary: Allows a user to authenticate its identity
@@ -61,6 +67,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/NotFoundError'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
   /users/{userId}:
     get:
       summary: Returns a user by ID
@@ -84,6 +96,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/NotFoundError'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
   /files:
     post:
       security:
@@ -113,6 +131,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UnauthorizedUserError'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
   /launches:
     get:
       summary: Returns a list of launches
@@ -131,6 +155,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/NotFoundError'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
     post:
       security:
         - bearerAuth: []
@@ -166,6 +196,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/NotFoundError'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
     delete:
       security:
         - bearerAuth: []
@@ -201,6 +237,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/NotFoundError'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
   /launches/{launchId}:
     post:
       security:
@@ -238,6 +280,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/NotFoundError'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
   /planets:
     get:
       summary: Returns a list of planets
@@ -251,4 +299,14 @@ paths:
                 items:
                   $ref: '#/components/schemas/Planet'
         '404':
-          description: No planets were found
+          description: Planets not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NotFoundError'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
