docs: update '.env.example'

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 DATABASE_URL="db-url"
 JWT_SECRET=jwtsecretgoeshere
 JWT_ENC_ALG=A128CBC-HS256
+CLOUDINARY_API_KEY='your-api-key'
+CLOUDINARY_CLOUD_NAME='cloud-name'
+CLOUDINARY_API_SECRET='it-has-to-be-secret'
